Add detailed specifications for Google Pixel 3a

--- a/devices/google/sargo/info.yml
+++ b/devices/google/sargo/info.yml
@@ -1,1 +1,42 @@
-
+device:
+  name: "Google Pixel 3a"
+  codename: "sargo"
+  release_date: 2019-04-01
+  specs:
+    soc: "Qualcomm SDM670 Snapdragon 670"
+    ram: "4GB"
+    cpu: "Octa-core Kryo 360 (4 x 2.0 GHz + 4 x 1.7 GHz)"
+    arch: "arm64"
+    gpu: "Qualcomm Adreno 615"
+    storage: "64GB"
+    battery: "3000 mAh Li-Po"
+    dimensions:
+      height: "152.4 mm"
+      width: "71.1 mm"
+      depth: "7.6 mm"
+  display:
+    size: "5.6 in"
+    resolution: "2220x1080"
+    density: "440 PPI"
+    panel_type: "AMOLED"
+    refresh_rate: "60 Hz"
+  connectivity:
+    network: [2G GSM, 3G UMTS, 3G CDMA2000, 4G LTE]
+    bluetooth: "5.0 (A2DP, aptX HD)"
+    wifi: "802.11 a/b/g/n/ac"
+    peripherals:
+      - "3.5mm jack"
+      - "eSIM"
+      - "Fingerprint reader"
+      - "NFC"
+      - "USB OTG"
+      - "Stereo front speakers"
+    sensors: [Accelerometer, Barometer, Compass, Gyroscope, Light sensor, Proximity sensor]
+    location: [GPS, GLONASS, Galileo, BeiDou]
+  cameras:
+    - label: "Main"
+      resolution: "12.2 MP"
+      features: "Dual LED flash"
+    - label: "Front"
+      resolution: "8.0 MP"
+      features: "No flash"
