--- a/devices/google/sargo/special-instructions.yml
+++ b/devices/google/sargo/special-instructions.yml
@@ -1,37 +1,35 @@
 device_codename: "sargo"
-last_validated: 2024-05-20
 
-# Critical warnings that block the UI until acknowledged
+# Logic: Blocks the UI until the user checks each 'danger' item
 critical_warnings:
-  - id: "data_loss"
-    level: "danger"
-    text: "Installing Linux will completely wipe your Android data. Ensure you have a backup of your photos and contacts."
-  - id: "firmware_version"
+  - id: "verizon_check"
+    level: "critical"
+    text: "Verizon models cannot be unlocked. Ensure 'OEM Unlocking' is not greyed out in Developer Options."
+  - id: "firmware_ubports"
     level: "warning"
-    text: "This device must be running Android 9.0 (PQ3B) or Android 11.0 firmware before flashing. Newer or older firmware may cause bootloops."
+    text: "UBports requires Android 9 (PQ3B) firmware. Flashing on Android 11+ firmware will break touch/sensors."
 
-# Hardware-specific quirks for the UI to display in an 'Info' section
-hardware_quirks:
-  - component: "Display"
-    status: "partial"
-    note: "Automatic brightness may be jittery on some AMOLED panels; manual control is recommended."
-  - component: "Audio"
-    status: "working"
-    note: "Stereo speakers are supported, but the bottom speaker is significantly louder by design."
-  - component: "Camera"
-    status: "experimental"
-    note: "Post-processing (HDR) is currently unavailable in Megapixels; images may appear dark."
+# Logic: Rendered as a grid of status badges in the 'Device Info' tab
+hardware_status:
+  working: ["Display", "WiFi", "Bluetooth", "Audio", "GPU", "SMS"]
+  partial:
+    - component: "Camera"
+      note: "Standard photos work; no advanced post-processing."
+    - component: "GPS"
+      note: "Requires a clear view of the sky; cold lock takes 2-5 minutes."
+  broken:
+    - component: "VoLTE"
+      note: "Carrier-dependent; currently unstable on mainline kernels."
 
-# Technical flags for the Rust flashing engine
+# Logic: Rust backend variables
 provisioning_flags:
-  partition_layout: "slot_ab" # Tells the app to check for /dev/block/boot_a and boot_b
-  uses_vbmeta: true           # App must run 'fastboot --disable-verity flash vbmeta'
-  custom_recovery_req: false  # Can flash directly via fastboot
-  recommended_filesystem: "ext4"
+  slot_type: "ab"               # Handles A/B partition logic
+  needs_vbmeta_disable: true     # Appends '--disable-verity --disable-verification' to flash
+  erase_userdata: true           # Runs 'fastboot erase userdata'
+  fastboot_timeout_ms: 300000    # 5-minute timeout for large system images
 
-# External resources for deep troubleshooting
-external_links:
-  - label: "XDA Development Thread"
-    url: "https://forum.xda-developers.com/f/google-pixel-3a-roms-kernels-recoveries-othe.8726/"
-  - label: "postmarketOS Wiki"
+resources:
+  - label: "Pixel 3a postmarketOS Wiki"
     url: "https://wiki.postmarketos.org/wiki/Google_Pixel_3a_(google-sargo)"
+  - label: "Droidian Device Status"
+    url: "https://devices.droidian.org/#/devices/sargo"
